dev/non_executable_reasons_record_from_random_10k/1155.txt
3.6
An error occurred while executing the following cell:
------------------
// %%javascript
// alert("hello world");
------------------

[0;36m  File [0;32m"<ipython-input-3-c8c60e9fcc00>"[0;36m, line [0;32m1[0m
[0;31m    // %%javascript[0m
[0m     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-3-c8c60e9fcc00>, line 1)

Executability                            : False
